testdata/baselines/reference/submodule/compiler/moduleResolution_explicitNodeModulesImport_implicitAny.errors.txt
/src/index.ts(1,10): error TS2305: Module '"/node_modules/foo/index"' has no exported member 'y'.


==== /src/index.ts (1 errors) ====
    import { y } from "../node_modules/foo";
             ~
!!! error TS2305: Module '"/node_modules/foo/index"' has no exported member 'y'.
    
==== /node_modules/foo/index.js (0 errors) ====
    exports.x = 0;
    